[project]
authors = [{name = "Your Name", email = "youremail@yourdomain.com"}]
dependencies = []
name = "py_finetuning"
requires-python = ">= 3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["pytorch", "nvidia", "conda-forge"]
platforms = ["linux-64"]
channel-priority = "disabled"

[tool.pixi.dependencies]
python = ">=3.12"
pytorch = { version = ">=2.5", channel = "pytorch" }
torchvision = { version = ">=0.20", channel = "pytorch" }
pytorch-cuda = { version = "12.4.*", channel = "pytorch" }
pillow = { version = "*", channel = "conda-forge" }
libjpeg-turbo = { version = "*", channel = "conda-forge" }
optuna = "*"
optuna-dashboard = "*"
matplotlib = "*"


[tool.pixi.pypi-dependencies]
transformers = "*"

[tool.pixi.tasks]
opt = "python opt_study.py"
pred = "python predict.py"
test = "python test.py"
opt_vis = "optuna-dashboard sqlite:///db.sqlite3"

[tool.pixi.system-requirements]
cuda = "12.4"